k8s/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easypanel-frontend
  namespace: easy
  labels:
    app.kubernetes.io/name: easypanel-frontend
    app.kubernetes.io/part-of: easypanel
    app.kubernetes.io/component: frontend
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: easypanel-frontend
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 32080
